# inspect_agents

./: .gitignore  .pre-commit-config.yaml  .pypirc.template  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dangerfile.js  README.md  STATUS.md  VENDING_BENCH_COMPLETION.md  config_spec.yaml  environment_var_flags.md  improving_mkdocs.md  mkdocs.yml  pyproject.toml  pyproject.toml.template  pytest-docs.ini  pytest.ini  pytest_no_xdist.ini  retrievers_framework_1.md  sitecustomize.py
.artifacts/: tools_files-store-map.txt
.github/: pull_request_template.md
.github/workflows/: benchmarks.yml  danger.yml  docs.yml  lint.yml  nightly.yml  release.yml  tests-smoke.yml  tests.yml
docs/: ARCHITECTURE.md  DOCS_INDEX.md  PROJECT_OVERVIEW.md  index.md
docs/adr/: 0002-model-roles-map.md  0003-supervisor-limits-and-observability.md  0004-filesystem-sandbox-guardrails.md  0004-tool-output-truncation.md  0005-tool-parallelism-policy.md  0006-simple-agent-architecture.md  0007-in-situ-self-improvement-evals.md
docs/api/: approval.md  fs.md  iterative.md  observability.md  run.md  settings.md  tools.md
docs/backlog/: README.md  TODO-pytest-parallel-fallback.md  todo_api_model_resolver_path_labels_contract.md  todo_bug_run_mutable_limits_default.md  todo_ci_docs_only_job.md  todo_ci_exclusivity_research_runner.md  todo_deprecations_alias_warnings_flag.md  todo_docs_changelog_template_release_drafter.md  todo_docs_delete_sandbox_error_alignment.md  todo_docs_environment_settings_api_section.md  todo_docs_fs_design_note_backlink.md  todo_docs_fs_read_only_alignment.md  todo_docs_getting_started_iterative_card.md  todo_docs_iterative_budgets_300_20_standard.md  todo_docs_iterative_output_cap_example.md  todo_docs_iterative_quick_reference_table.md  todo_docs_iterative_see_also_links.md  todo_docs_iterative_supervisor_subsection.md  todo_docs_model_resolution_debugging_howto.md  todo_docs_read_file_line_numbering.md  todo_feature_approvals_handoff_exclusivity_default.md  todo_feature_fs_readonly_flag.md  todo_feature_iterative_task_web_search_flag.md  todo_feature_migration_helper_debug_logging.md  todo_feature_migration_idempotency_check.md  todo_feature_migration_instance_scoping.md  todo_feature_model_resolver_env_sentinel_none_none.md  todo_feature_model_resolver_error_type.md  todo_feature_model_resolver_explain_api.md  todo_feature_runner_ci_exclusive.md  todo_feature_tools_py_migrate_fs_helpers.md  todo_feature_transcript_skipped_tool_event.md  todo_feature_yaml_limits_parser.md  todo_feature_yaml_subagent_role_mapping.md  todo_features_sandbox_best_practices.md  todo_limits_migration_fallback_size_caps.md  todo_obs_effective_tool_output_limit_tests.md  todo_policy_migration_approvals_fallback.md  todo_settings_iterative_wrappers.md  todo_settings_max_tool_output_accessor.md  (+6 more)
docs/cli/: model_explain.md
docs/design/: deepagents_implementation_prompts.md  exploration_examples_prompts.md  open-questions.md
docs/diagrams/: architecture.mmd  architecture_overview.mmd
docs/explanation/: index.md
docs/getting-started/: inspect_agents_quickstart.md  inspect_console_cheatsheet.md  research_example.md
docs/guides/: retries_cache.md  sandbox_profiles.md  subagents.md  supervisor-limits.md  tool-umbrellas.md
docs/how-to/: approvals.md  cli_docs_guidelines.md  exploration_examples.md  filesystem.md  filesystem_sandbox_quickstart.md  handoff_prescan.md  index.md  inspect_sandbox.md  model_resolver_explain.md  operations_logging_tracing.md  sandboxing_inspect_agents.md
docs/reference/: cli.md  environment.md  index.md  iterative-agent-behavior.md
docs/tools/: README.md  _template.md  delete_file.md  deprecations.md  edit_file.md  files.md  read_file.md  typed_results.md  web_browser.md  write_file.md  write_todos.md
env_templates/: configure.py  inspect.env
examples/: README.md  __init__.py  __main__.py  _utils.py
examples/debug/: model_explain.py  show_limits.py
examples/demos/: README.md  exploration_demo.py  simple_arch_demo.py  simple_architecture.py  subagent_approvals_demo.py
examples/inspect/: __init__.py  model_explain.py
examples/lib/: __init__.py  builders.py
examples/research/: README.md  iterative_task.py  run_iterative.py
examples/runners/: exploration_runner.py  iterative_runner.py  profiled_runner.py  research_runner.py  supervisor_runner.py
examples/tasks/: exploration_task.py  iterative_task.py  prompt_task.py  research_task.py
examples/vending_bench/: README.md  __init__.py  config.py  demand.py  design.md  env.py  integrations.py  memory.py  metrics.py  prompts.py  run.py  runtime.py  source_excerpts.md  state.py  supplier.py  tools.py
mirror-repo/: CODEOWNERS  README.md
mirror-repo/ci/: sync.yml
mirror-repo/release-notes/: _template.md
mirror-repo/scripts/: deploy-check.sh  smoke-test.sh  (+2 more)
prompts/: FEATURE_PROMPT.txt
scripts/: README.md  commit_guard.py  create_feature_worktrees.sh  export_eval_json.sh  gen_env_docs.py  hooks.py  manual_approval_check.py  new_worktree.sh  quickstart_toy.py  read_log_eval.py  release.py  remove_worktrees.sh  scaffold_agent.py  session-init.sh  sweep_status.py
tests/: README.md  __init__.py  conftest.py
tools/: mirror_sync.py
(+326 files in other folders)
